# rust-dsp-effects

./: CLAUDE.md  Cargo.toml  README.md
benches/: effects_bench.rs
src/: biquad.rs  chorus.rs  compressor.rs  delay.rs  delay_line.rs  distortion.rs  effect.rs  filter.rs  lfo.rs  lib.rs  oversample.rs  param.rs
