[package]
name = "rust-dsp-effects"
version = "0.1.0"
edition = "2024"
authors = ["Morgan Espitia <morganespitia@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "High-performance, embedded-ready audio effects framework"
repository = "https://github.com/ampactor/rust-dsp-effects"
keywords = ["audio", "dsp", "effects", "embedded", "no_std"]
categories = ["multimedia::audio", "no-std"]

[dependencies]
# Start minimal, add as needed

[dev-dependencies]
# For testing and benchmarking
criterion = "0.5"

[[bench]]
name = "effects_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"